--- a/config.org
+++ b/config.org
@@ -26,6 +26,7 @@
   (exec-path-from-shell-initialize))
   #+END_SRC
 * Some shit I got from online youtube tutorials lol:
+** Noob helpers
   #+BEGIN_SRC emacs-lisp :tangle yes
 (use-package try
   :ensure t)
@@ -33,7 +34,9 @@
 (use-package which-key
   :ensure t
   :config (which-key-mode))
-
+  #+END_SRC
+** Typing helpers
+  #+BEGIN_SRC emacs-lisp :tangle yes
 (use-package avy
   :ensure t
   :config
@@ -51,6 +54,35 @@
 (setq ac-auto-start nil)
 (ac-set-trigger-key "TAB")
 
+  #+END_SRC
+** Swiper no swiping
+  #+BEGIN_SRC emacs-lisp :tangle yes
+    (use-package counsel
+      :ensure t
+      )
+
+    (use-package swiper
+      :ensure try
+      :config
+      (progn
+	(ivy-mode 1)
+	(setq ivy-use-virtual-buffers t)
+	(global-set-key "\C-s" 'swiper)
+	(global-set-key (kbd "C-c C-r") 'ivy-resume)
+	(global-set-key (kbd "<f6>") 'ivy-resume)
+	(global-set-key (kbd "M-x") 'counsel-M-x)
+	(global-set-key (kbd "C-x C-f") 'counsel-find-file)
+	(global-set-key (kbd "<f1> f") 'counsel-describe-function)
+	(global-set-key (kbd "<f1> v") 'counsel-describe-variable)
+	(global-set-key (kbd "<f1> l") 'counsel-load-library)
+	(global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+	(global-set-key (kbd "<f2> u") 'counsel-unicode-char)
+	(global-set-key (kbd "C-c g") 'counsel-git)
+	(global-set-key (kbd "C-c j") 'counsel-git-grep)
+	(global-set-key (kbd "C-c k") 'counsel-ag)
+	(global-set-key (kbd "C-x l") 'counsel-locate)
+	(define-key read-expression-map (kbd "C-r") 'counsel-expression-history)
+	))
   #+END_SRC
 * Solarized:
   #+BEGIN_SRC emacs-lisp :tangle yes
@@ -85,4 +117,8 @@
   (add-hook 'LaTeX-mode-hook 'LaTeX-math-mode)
   (add-hook 'LaTeX-mode-hook 'TeX-source-correlate-mode)
   (add-hook 'LaTeX-mode-hook 'TeX-PDF-mode))
+  #+END_SRC
+* Magit:
+  #+BEGIN_SRC emacs-lisp :tangle yes
+    ;; COMING SOON :o 
   #+END_SRC
