--- a/config.org
+++ b/config.org
@@ -166,3 +166,19 @@ Indentation
   #+BEGIN_SRC emacs-lisp :tangle yes
     ;; COMING SOON :o 
   #+END_SRC
+* Reveal.js:
+#+BEGIN_SRC emacs-lisp :tangle yes
+(use-package ox-reveal
+:ensure ox-reveal)
+
+(setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
+(setq org-reveal-mathjax t)
+
+(use-package htmlize
+:ensure t)
+#+ENd_SRC
+* x10 lol:
+#+BEGIN_SRC emacs-lisp :tangle yes
+(use-package scala-mode)
+(add-to-list 'auto-mode-alist '("\\.x10\\'" . scala-mode))
+#+END_SRC
