Add elpy, TIDE, haskell.

--- a/config.org
+++ b/config.org
@@ -31,6 +31,7 @@ Custom buttons :D
 Indentation
 #+BEGIN_SRC emacs-lisp :tangle yes
 (setq-default tab-width 2)
+(setq-default c-basic-offset 4) ;; Set C offset
 (setq-default js-indent-level 2)
 (setq-default indent-tabs-mode nil)
 (setq-default show-trailing-whitespace t) ;; show trailing whitespaces
@@ -39,6 +40,8 @@ Indentation
 Org mode hooks
 #+BEGIN_SRC emacs-lisp :tangle yes
 (add-hook 'org-mode-hook (lambda () (mac-auto-operator-composition-mode 1)))
+;; Adds alphabetical bulleting. JK ITS BROKEN 
+;;(setq org-list-allow-alphabetical nil)
 #+END_SRC
 * Exec path from shell:
   #+BEGIN_SRC emacs-lisp :tangle yes
@@ -48,6 +51,12 @@ Org mode hooks
   :config
   (exec-path-from-shell-initialize))
   #+END_SRC
+* flycheck:
+#+BEGIN_SRC: emacs-lisp :tangle yes
+(use-package flycheck
+  :ensure t
+  :init (global-flycheck-mode))
+#+END_SRC
 * Some shit I got from online youtube tutorials lol:
 ** Noob helpers
   #+BEGIN_SRC emacs-lisp :tangle yes
@@ -116,6 +125,7 @@ Org mode hooks
   #+END_SRC
 * LaTeX:
   #+BEGIN_SRC emacs-lisp :tangle yes
+(setq org-preview-latex-default-process 'imagemagick)
 (use-package auctex
   :defer t
   :mode ("\\.tex\\'" . latex-mode)
@@ -197,4 +207,64 @@ Org mode hooks
 (projectile-rails-global-mode)
 ;; hotfix for rbenv shell problem.
 
+#+END_SRC
+* TIDE Setup
+#+BEGIN_SRC emacs-lisp :tangle yes
+(use-package tide
+  :ensure t
+  :after (typescript-mode company flycheck)
+  :hook ((typescript-mode . tide-setup)
+         (typescript-mode . tide-hl-identifier-mode)
+         (before-save . tide-format-before-save)))
+
+(defun setup-tide-mode ()
+  (interactive)
+  (tide-setup)
+  (flycheck-mode +1)
+  (setq flycheck-check-syntax-automatically '(save mode-enabled))
+  (eldoc-mode +1)
+  (tide-hl-identifier-mode +1)
+  ;; company is an optional dependency. You have to
+  ;; install it separately via package-install
+  ;; `M-x package-install [ret] company`
+  (company-mode +1))
+
+;; aligns annotation to the right hand side
+(setq company-tooltip-align-annotations t)
+
+(setq typescript-indent-level 2)
+
+;; formats the buffer before saving
+(add-hook 'before-save-hook 'tide-format-before-save)
+
+(add-hook 'typescript-mode-hook #'setup-tide-mode)
+
+(require 'web-mode)
+(add-to-list 'auto-mode-alist '("\\.tsx\\'" . web-mode))
+(add-hook 'web-mode-hook
+          (lambda ()
+            (when (string-equal "tsx" (file-name-extension buffer-file-name))
+              (setup-tide-mode))))
+;; enable typescript-tslint checker
+(require 'flycheck)
+(flycheck-add-mode 'typescript-tslint 'web-mode)
+
+(setq tide-format-options
+'(:insertSpaceAfterFunctionKeywordForAnonymousFunctions t
+:placeOpenBraceOnNewLineForFunctions nil
+:indentSize 2
+:tabSize 2))
+#+END_SRC
+* Haskell:
+TODO: add hs-lint.
+#+BEGIN_SRC emacs_lisp :tangle yes
+(custom-set-variables
+ '(haskell-stylish-on-save t))
+#+END_SRC
+* Python IDE:
+#+BEGIN_SRC emacs_lisp :tangle yes
+(use-package elpy
+  :ensure t
+  :init
+  (elpy-enable))
 #+END_SRC
